# rank-analysis

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md
.github/workflows/: patch-notes-data.yml  release.yml
data/patch-notes/: cn-latest.json
docs/superpowers/specs/: 2026-07-11-ai-analysis-iteration-design.md  2026-07-11-full-config-backup-sync-design.md  2026-07-11-jb-ui-refinement-design.md  2026-07-18-ai-prompt-context-design.md  2026-07-18-champselect-patch-notes-design.md  2026-07-18-cn-patch-notes-ai-pipeline-design.md  2026-07-18-matchdetail-grounding-design.md  2026-07-18-multikill-badges-design.md
lol-record-analysis-tauri/: package-lock.json  package.json
lol-record-analysis-tauri/src/: App.vue  global.css  main.ts
lol-record-analysis-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
lol-record-analysis-tauri/src-tauri/capabilities/: default.json
lol-record-analysis-tauri/src-tauri/src/: cn_patch_notes.rs  command.rs  config.rs  fandom.rs  game_state_monitor.rs  lib.rs  main.rs  observability.rs  rule_engine.rs  state.rs
lol-record-analysis-tauri/src-tauri/src/command/: ai.rs  cloud_sync.rs  config.rs  fandom.rs  launcher.rs  match_history.rs  opgg.rs  session.rs  user_tag.rs  user_tag_config.rs
lol-record-analysis-tauri/src-tauri/src/constant/: game.rs
lol-record-analysis-tauri/src-tauri/src/fandom/: patch_notes.rs
lol-record-analysis-tauri/src-tauri/src/lcu/api/: champion_select.rs  match_history.rs  model.rs  session.rs
lol-record-analysis-tauri/src-tauri/src/lcu/util/: http.rs  token.rs
lol-record-analysis-tauri/src-tauri/src/opgg/: api.rs  cache.rs  data.rs  mod.rs
lol-record-analysis-tauri/src-tauri/src/opgg/fixtures/: aram_sample.json  ranked_sample.json
lol-record-analysis-tauri/src/components/: Framework.vue  Header.vue  LoadingComponent.vue  SideNavigation.vue
lol-record-analysis-tauri/src/composables/: useGameState.ts  useMatchDetailPlayers.spec.ts  useMatchDetailPlayers.ts  useSessionSync.spec.ts  useSessionSync.ts  useSessionTiers.ts  useZoom.spec.ts  useZoom.ts
lol-record-analysis-tauri/src/pinia/: cloudSync.ts  playerNotes.ts
scripts/patch-notes/: extract.mjs  extract.test.mjs  fetch.mjs  fetch.test.mjs  run.mjs  validate.mjs  validate.test.mjs
(+100 files in other folders)
