[package]
name = "lol-record-analysis-app"
authors = ["wnzzer"]
edition = "2021"

[lib]
name = "lol_record_analysis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"   # 优化级别设为 "z"，专注于大小优化
lto = true        # 启用链接时优化
codegen-units = 1 # 减少代码生成单元，提高优化效果
panic = "abort"   # 恐慌时直接中止，减少错误处理代码
strip = true      # 剥离符号信息，减小二进制大小

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1.10.3"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
] } # http client 用于访问 lcu 接口的客户端
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "psapi",
    "winbase",
    "minwindef",
    "ntdef",
    "libloaderapi",
    "memoryapi",
    "winnt",
    "shellapi",
    "winuser",
] } # 用于 Windows api，用于获取lol进程信息
log = "0.4.0"
winreg = "0.55" # 清理腾讯登录客户端注册的 LOL 开机自启项（command/launcher.rs）
env_logger = "0.11"
base64 = "0.21"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2.7.1" # 导入导出文件选择对话框
moka = { version = "0.12", features = ["future"] }
phf = { version = "0.12", features = ["macros"] } # 用于静态配置编译期生成
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3" # 用于 URL 编码
tauri-plugin-updater = "2.9.0"
mlua = { version = "0.9", features = ["lua54", "vendored", "async"] }
futures = "0.3"
tokio-tungstenite = { version = "0.28", features = [
    "native-tls",
    "connect",
    "handshake",
] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
url = "2.5"
tauri-plugin-mcp-bridge = "0.11"
# 错误上报（默认关闭，用户在设置中 opt-in；debug 构建默认开启便于调试）
# tauri-plugin-sentry 通过 Rust 后端统一转发前端 + 后端事件，前端无需额外 npm 依赖
# log + logs feature：把 `log` 记录转成 Sentry Structured Logs（见 observability.rs / main.rs）
sentry = { version = "0.42", features = ["log", "logs"] }
tauri-plugin-sentry = "0.5"
# 匿名设备 ID（observability.rs 持久化生成，仅用于 Sentry DAU 去重）
uuid = { version = "1", features = ["v4"] }
